@@ -26,6 +26,7 @@
 package jdk.jfr;
 
 import java.security.AccessControlContext;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -104,21 +105,21 @@ public final class FlightRecorderPermission extends java.security.BasicPermissio
         PrivateAccess.setPrivateAccess(new InternalAccess());
     }
 
-    private static final class InternalAccess extends PrivateAccess {
+    private final static class InternalAccess extends PrivateAccess {
 
         @Override
         public Type getType(Object o) {
-            if (o instanceof AnnotationElement ae) {
-                return ae.getType();
+            if (o instanceof AnnotationElement) {
+                return ((AnnotationElement) o).getType();
             }
-            if (o instanceof EventType et) {
-                return et.getType();
+            if (o instanceof EventType) {
+                return ((EventType) o).getType();
             }
-            if (o instanceof ValueDescriptor vd) {
-                return vd.getType();
+            if (o instanceof ValueDescriptor) {
+                return ((ValueDescriptor) o).getType();
             }
-            if (o instanceof SettingDescriptor sd) {
-                return sd.getType();
+            if (o instanceof SettingDescriptor) {
+                return ((SettingDescriptor) o).getType();
             }
             throw new Error("Unknown type " + o.getClass());
         }
@@ -175,7 +176,7 @@ public final class FlightRecorderPermission extends java.security.BasicPermissio
 
         @Override
         public ValueDescriptor newValueDescriptor(Class<?> type, String name) {
-            return new ValueDescriptor(type, name, List.of(), true);
+            return new ValueDescriptor(type, name, Collections.emptyList(), true);
         }
 
         @Override
