@@ -26,6 +26,7 @@
 package jdk.jfr;
 
 import java.lang.annotation.Annotation;
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
@@ -130,7 +131,7 @@ public final class ValueDescriptor {
      *         doesn't have {@code FlightRecorderPermission("registerEvent")}
      */
     public ValueDescriptor(Class<?> type, String name, List<AnnotationElement> annotations) {
-        this(type, name, List.copyOf(annotations), false);
+        this(type, name, new ArrayList<>(annotations), false);
     }
 
 
@@ -288,7 +289,7 @@ public final class ValueDescriptor {
      */
     public List<ValueDescriptor> getFields() {
         if (type.isSimpleType()) {
-            return List.of();
+            return Collections.emptyList();
         }
         return type.getFields();
     }
